<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/txtTitle"
        android:textColor="#000000"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="105dp"
        android:text="@string/txtDescription"
        android:textColor="#000000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/txtWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtNumWidth"
        android:layout_alignParentStart="true"
        android:layout_marginStart="7dp"
        android:text="@string/txtWidth" />

    <TextView
        android:id="@+id/txtLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtNumLength"
        android:layout_alignParentStart="true"
        android:text="@string/txtLength" />

    <EditText
        android:id="@+id/txtNumWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <EditText
        android:id="@+id/txtNumLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btnCalculate"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:inputType="number"
        android:text="0" />

    <TextView
        android:id="@+id/txtTileSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:text="@string/txtTileSize"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:text="@string/btnCalculate"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp">

        <RadioButton
            android:id="@+id/tiles12x12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="12 x 12" />

        <RadioButton
            android:id="@+id/tiles18x18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="18 x 18" />
    </RadioGroup>
</RelativeLayout>